# MJ_LangGraph

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  report_agent.py  test_agentic_flow.py  test_templates.py  util.py
templates_en/: system_prompt.jinja  user_form.jinja  user_prompt.jinja
templates_kn/: system_prompt.jinja  user_prompt.jinja
